--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "bootstrap": "^5.3.3",
     "browserify-zlib": "^0.2.0",
     "chart.js": "^4.4.2",
+    "chartjs-plugin-datalabels": "^2.2.0",
     "font-awesome": "^4.7.0",
     "http": "^0.0.1-security",
     "react": "^18.3.1",
